Add Current Track for searching

--- a/dos33.html
+++ b/dos33.html
@@ -6097,7 +6097,7 @@ Let the complete clusterfrak of bad design commence in <a class='link' href="htt
                     140 <a class='d' name='PRIOR'    >PRIOR       </a>EQU $27         PRIOR HALFTRACK.
                     141 <a class='d' name='TRKN'     >TRKN        </a>EQU $2A         DESIRED TRACK.
                     142 <a class='d' name='SLOTTEMP' >SLOTTEMP    </a>EQU $2B         SLOT NUM TIMES $10.
-                    143 <a class='d' name='CURTRK'   >CRKTRK      </a>EQU $478        CURRENT TRACK ON ENTRY.
+                    143 <a class='d' name='CURTRK'   >CRKTRK      </a>EQU $478        CURRENT TRACK ON ENTRY.           ; "Current Track" Drive 1
                     144 *
                     145 ************************
                     146 *                      *
