Benign Curiosity spelling & grammar

--- a/dos33.html
+++ b/dos33.html
@@ -9765,6 +9765,6 @@ Look for an upcoming announcement in 2017 in c.s.a2
 96xx: TODO
 9600G
 
-(*) Using the original positive meaning 'curiosious benign probing for the sake of learning', before it got hijacked to mean a negative connotation: 'destructive entry.'
+(*) Using the original positive meaning 'benign curiosity probing for the sake of learning', before it got hijacked to mean a negative connotation: 'destructive entry.'
 
 -->
