Cleanup Comment Margin Whitespace

--- a/dos33.html
+++ b/dos33.html
@@ -630,73 +630,72 @@ console.log( "TODO: CSS Monochrome" );
 <button type='button' id='syntax_mono'           onclick='onSyntaxChangeMono ();'>Monochrome</button>
 </div>
 <div class='commentmargin'>
-<pre><br>
-|                                                                            
-|                                                                            
-|                                                                            
-|                                                                            
-|                                                                            
-|                                                                            
-|                                                                            
-|                                                                            
-|                                                                            
-|                                                                            
-|                                                                            
-|                                                                            
-|                                                                            
-|                                                                            
-|                                                                            
-|                                                                            
-|                                                                            
-|                                                                            
-|                                                                            
-|                                                                            
-|                                                                            
-|                                                                            
-|                                                                            
-|                                                                            
-|                                                                            
-|                                                                            
-|                                                                            
-|                                                                            
-|                                                                            
-|                                                                            
-|                                                                            
-|                                                                            
-|                                                                            
-|                                                                            
-|                                                                            
-|                                                                            
-|                                                                            
-|                                                                            
-|                                                                            
-|                                                                            
-|                                                                            
-|                                                                            
-|                                                                            
-|                                                                            
-|                                                                            
-|                                                                            
-|                                                                            
-|                                                                            
-|                                                                            
-|                                                                            
-|                                                                            
-|                                                                            
-|                                                                            
-|                                                                            
-|                                                                            
-|                                                                            
-|                                                                            
-|                                                                            
-|                                                                            
-|                                                                            
-|                                                                            
-|                                                                            
-|                                                                            
-|                                                                            
-|                                                                            
-|                                                                            
+<pre>                                                                            |
+|
+|
+|
+|
+|
+|
+|
+|
+|
+|
+|
+|
+|
+|
+|
+|
+|
+|
+|
+|
+|
+|
+|
+|
+|
+|
+|
+|
+|
+|
+|
+|
+|
+|
+|
+|
+|
+|
+|
+|
+|
+|
+|
+|
+|
+|
+|
+|
+|
+|
+|
+|
+|
+|
+|
+|
+|
+|
+|
+|
+|
+|
+|
+|
+|
 <pre>
 </div>
 <h1>Apple DOS 3.3C Source Code (Unified HTML and Annotated Version)</h1>
