--- a/dos33.html
+++ b/dos33.html
@@ -1523,22 +1523,22 @@ With that "legalese" out of the way ... enjoy the read!
 1E43:D0 05          194             BNE <a class='x' href='#INITF1'>INITF1</a>      ;LOAD AND RUN THE 'HELLO' PROGRAM                   ; &darr; (always) 
                     195 ;
                     196 <a class='f' name='INITF'    >INITF       </a>EQU *
-1E45:AD 62 2A       197             LDA <a class='v' href='#SVCMD'>SVCMD</a>
-1E48:F0 06          198             BEQ <a class='x' href='#INITG'>INITG</a>
+1E45:AD 62 2A       197 <!--                           -->            LDA <a class='v' href='#SVCMD'>SVCMD</a>
+1E48:F0 06          198 <!--                           -->            BEQ <a class='x' href='#INITG'>INITG</a>
 1E4A:8d 5F 2A       199 <a class='f' name='INITF1'   >INITF1      </a>STA CMDNO
-1E4D:4C 80 21       200             JMP <a class='x' href='#CMDGO1'>CMDGO1</a>
+1E4D:4C 80 21       200 <!--                           -->            JMP <a class='x' href='#CMDGO1'>CMDGO1</a>
                     201 <a class='f' name='INITG'    >INITG       </a>EQU *
-1E50:60             202             RTS
+1E50:60             202 <!--                           -->            RTS
                     203 ;
                     204 <a class='d' name='IFB'      >IFB         </a>EQU *                                           ; --- Copied to $3D0 ---
-1E51:4C BF 1D       205 <a class='f' name='DBVECT'>DBVECT      </a>JMP <a class='x' href='#DBRST'>DBRST</a>                                       ; $3D0: JMP $9DBF DOS Warm RESET 
-1E54:4C 84 1D       206             JMP <a class='x' href='#DBINIT' >DBINIT</a>                                      : $3D3: JMP $9D84 DOS Cold RESET 
-1E57:4C FD 2A       207             JMP <a class='x' href='#USERENT'>USERENT</a> ;USER EXTERNAL ENTRY TO FILE MANAGER; $3D6: JMP $AAFD FM   (File Manager)
-1E5A:4C B5 37       208             JMP <a class='x' href='#DISKIO '>DISKIO</a>                                      ; $3D9: JMP $B7B5 RWTS (ReadWriteTrackSector)
+1E51:4C BF 1D       205 <a class='f' name='DBVECT'   >DBVECT      </a>JMP <a class='x' href='#DBRST'>DBRST</a>                                       ; $3D0: JMP $9DBF DOS Warm RESET
+1E54:4C 84 1D       206 <!--                           -->            JMP <a class='x' href='#DBINIT' >DBINIT</a>                                      ; $3D3: JMP $9D84 DOS Cold RESET
+1E57:4C FD 2A       207 <!--                           -->            JMP <a class='x' href='#USERENT'>USERENT</a> ;USER EXTERNAL ENTRY TO FILE MANAGER; $3D6: JMP $AAFD FM   (File Manager)
+1E5A:4C B5 37       208 <!--                           -->            JMP <a class='x' href='#DISKIO '>DISKIO</a>                                      ; $3D9: JMP $B7B5 RWTS (ReadWriteTrackSector)
                     209 <a class='f' name='CCBLDR'   >CCBLDR      </a>EQU *                                           ; $3DC: GetParamFM (AY = $B5BB, CCB = Command Control Block)
-1E5D:AD 0F 1D       210             LDA <a class='v' href='#CCBADR'>CCBADR</a>+<span class='n'>1</span>
-1E60:AC 0E 1D       211             LDY <a class='v' href='#CCBADR'>CCBADR</a>
-1E63:60             212             RTS
+1E5D:AD 0F 1D       210 <!--                           -->            LDA <a class='v' href='#CCBADR'>CCBADR</a>+<span class='n'>1</span>
+1E60:AC 0E 1D       211 <!--                           -->            LDY <a class='v' href='#CCBADR'>CCBADR</a>
+1E63:60             212 <!--                           -->            RTS
                     213 <a class='f' name='IOBLDR'   >IOBLDR      </a>EQU *                                           ; $3E3: GetParamRWTS (AY = $B7E8, )
 1E64:AD C2 2A       214             LDA <a class='v' href='#AIOB'  >AIOB</a>+<span class='n'>1</span>
 1E67:AC C1 2A       215             LDY <a class='v' href='#AIOB'  >AIOB</a>
